force-app/main/default/objects/Candidate__c/fields/MDI_Project_200_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>MDI_Project_200_Completion_Date__c</fullName>
    <label>MDI/Project 200 Completion Date</label>
    <type>Date</type>
</CustomField>