force-app/main/default/objects/Candidate__c/fields/MDI_Project_200_Date_Assigned_MDI_Projec__c.field-meta.xml
<CustomField>
    <fullName>MDI_Project_200_Date_Assigned_MDI_Projec__c</fullName>
    <label>MDI/Project 200 Date Assigned	MDI/Projec</label>
    <length>30</length>
    <type>Text</type>
</CustomField>