force-app/main/default/objects/Candidate__c/fields/MDI_Project_200_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>MDI_Project_200_Reviewed_By__c</fullName>
    <label>MDI/Project 200 Reviewed By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>