force-app/main/default/objects/Candidate__c/fields/MDI_Project_200_Tally__c.field-meta.xml
<CustomField>
    <fullName>MDI_Project_200_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDI/Project 200 Tally</label>
    <type>Checkbox</type>
</CustomField>