force-app/main/default/objects/Candidate__c/fields/MDI_Score__c.field-meta.xml
<CustomField>
    <fullName>MDI_Score__c</fullName>
    <label>MDI Score</label>
    <length>30</length>
    <type>Text</type>
</CustomField>