force-app/main/default/objects/Candidate__c/fields/MDI_Tally__c.field-meta.xml
<CustomField>
    <fullName>MDI_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDI Tally</label>
    <type>Checkbox</type>
</CustomField>