force-app/main/default/objects/Candidate__c/fields/Middle_Name_or_Initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_or_Initial__c</fullName>
    <label>Middle Name or Initial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>