force-app/main/default/objects/Candidate__c/fields/MS_10__c.field-meta.xml
<CustomField>
    <fullName>MS_10__c</fullName>
    <label>MS-10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>