force-app/main/default/objects/Candidate__c/fields/Next_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Date__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Career_Presentation_Date_Scheduled__c)), Career_Presentation_Date_Scheduled__c &gt;= TODAY()),
    Career_Presentation_Date_Scheduled__c,
    IF(
        AND(NOT(ISBLANK(SI_3_Scheduled__c)), SI_3_Scheduled__c &gt;= TODAY()),
        SI_3_Scheduled__c,
        IF(
            AND(NOT(ISBLANK(SI_2_Date_Scheduled__c)), SI_2_Date_Scheduled__c &gt;= TODAY()),
            SI_2_Date_Scheduled__c,
            IF(
                AND(NOT(ISBLANK(SI_1_Date_Scheduled__c)), SI_1_Date_Scheduled__c &gt;= TODAY()),
                SI_1_Date_Scheduled__c,
                IF(
                    AND(NOT(ISBLANK(Attraction_Interview_Date_Scheduled__c)), Attraction_Interview_Date_Scheduled__c &gt;= TODAY()),
                    Attraction_Interview_Date_Scheduled__c,
                    NULL
                )
            )
        )
    )
)</formula>
    <label>Next Meeting Date</label>
    <type>Date</type>
</CustomField>