force-app/main/default/objects/Candidate__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close Record</fullName>
            </value>
            <value>
                <fullName>Keep In Touch</fullName>
            </value>
            <value>
                <fullName>F/up to schedule AI</fullName>
            </value>
            <value>
                <fullName>F/up to schedule SI 1</fullName>
            </value>
            <value>
                <fullName>F/up to schedule SI 2</fullName>
            </value>
            <value>
                <fullName>F/up to schedule CP</fullName>
            </value>
            <value>
                <fullName>F/up of MDE - P200</fullName>
            </value>
            <value>
                <fullName>F/up of MS</fullName>
            </value>
            <value>
                <fullName>Contracted_A</fullName>
                <label>Contracted A</label>
            </value>
            <value>
                <fullName>F/up to schedule Pre-Launch Meeting</fullName>
            </value>
            <value>
                <fullName>In Background Check</fullName>
            </value>
            <value>
                <fullName>Post Background Check</fullName>
            </value>
            <value>
                <fullName>SOE / Financial / Crim</fullName>
            </value>
            <value>
                <fullName>Sent to ASO</fullName>
            </value>
            <value>
                <fullName>Sent B Codes</fullName>
            </value>
            <value>
                <fullName>Sent A Codes</fullName>
            </value>
            <value>
                <fullName>Attend Pre-Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>