force-app/main/default/objects/Candidate__c/fields/Nominator_Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Sourced_By__c</fullName>
    <label>Nominator Sourced By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>