force-app/main/default/objects/Candidate__c/fields/Office_Location_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Office_Location_Picklist__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>KoreaTown</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Newport Beach</fullName>
            </value>
            <value>
                <fullName>Roseville</fullName>
            </value>
            <value>
                <fullName>Utah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>