force-app/main/default/objects/Candidate__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of submitted Opportunities linked to this candidate's Contact. Updated via Flow.</description>
    <inlineHelpText>Number of submitted opportunities. Contract B requirement: 5</inlineHelpText>
    <label>Opportunity Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>