force-app/main/default/objects/Candidate__c/fields/personal_email__c.field-meta.xml
<CustomField>
    <fullName>personal_email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Personal Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>