force-app/main/default/objects/Candidate__c/fields/personal_email_formula__c.field-meta.xml
<CustomField>
    <fullName>personal_email_formula__c</fullName>
    <formula>Contact__r.Personal_Email__c</formula>
    <label>personal email</label>
    <type>Text</type>
</CustomField>