force-app/main/default/objects/Candidate__c/fields/Projected_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Test_Date__c</fullName>
    <label>Projected Test Date</label>
    <type>Date</type>
</CustomField>