force-app/main/default/objects/Candidate__c/fields/Property_Casual_License__c.field-meta.xml
<CustomField>
    <fullName>Property_Casual_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property/Casual License</label>
    <type>Checkbox</type>
</CustomField>