force-app/main/default/objects/Candidate__c/fields/Recruit_Source_Temp__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Source_Temp__c</fullName>
    <label>Recruit Source Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Source</fullName>
            </value>
            <value>
                <fullName>Warm Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>