force-app/main/default/objects/Candidate__c/fields/RecruiterPicklist__c.field-meta.xml
<CustomField>
    <fullName>RecruiterPicklist__c</fullName>
    <label>Recruiter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brooke Ianni</fullName>
            </value>
            <value>
                <fullName>Rachyll Tenny</fullName>
            </value>
            <value>
                <fullName>Susan Kim</fullName>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
                <isActive>false</isActive>
                <label>Jonathan Gruber</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>