force-app/main/default/objects/Candidate__c/fields/Recruiting_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Source__c</fullName>
    <label>Recruiting Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
                <label>Linkedin</label>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Agency/MassMutual</fullName>
            </value>
            <value>
                <fullName>Career Fair/Trade Show</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Employment/Staffing Agency</fullName>
            </value>
            <value>
                <fullName>Home Office Lead</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Networking Event</fullName>
            </value>
            <value>
                <fullName>Personal Observation</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Job website</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>