force-app/main/default/objects/Candidate__c/fields/Recruiting_Source_Notes_or_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Source_Notes_or_Referred_By__c</fullName>
    <label>Recruiting Source Notes or Referred By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>