force-app/main/default/objects/Candidate__c/fields/Recruiting_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Sub_Source__c</fullName>
    <label>Recruiting Sub-Source</label>
    <type>TextArea</type>
</CustomField>