force-app/main/default/objects/Candidate__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is candidate registered?</inlineHelpText>
    <label>Registered?</label>
    <type>Checkbox</type>
</CustomField>