force-app/main/default/objects/Candidate__c/fields/RELATIONSHIPS__c.field-meta.xml
<CustomField>
    <fullName>RELATIONSHIPS__c</fullName>
    <label>Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>In A Relationship- No Kids</fullName>
            </value>
            <value>
                <fullName>In A Relaionship with Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>