force-app/main/default/objects/Candidate__c/fields/Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Met__c</fullName>
    <description>Indicates if Contract B agent has met the FYC and submission requirements.</description>
    <formula>IF(
    ISPICKVAL(Contract_Type__c, 'Contract B'),
    Total_FYC__c &gt;= 2500 &amp;&amp; Opportunity_Count__c &gt;= 5,
    FALSE
)</formula>
    <inlineHelpText>TRUE if Contract B agent has met $2,500 FYC and 5 submission requirements.</inlineHelpText>
    <label>Requirements Met</label>
    <type>Checkbox</type>
</CustomField>