force-app/main/default/objects/Candidate__c/fields/Resume_Text__c.field-meta.xml
<CustomField>
    <fullName>Resume_Text__c</fullName>
    <label>Resume Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>