force-app/main/default/objects/Candidate__c/fields/Sales_Manager_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Unit__c</fullName>
    <label>Sales Manager Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>