force-app/main/default/objects/Candidate__c/fields/Sales_Manager_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a filtered user list that only shows users that are Sales Managers</description>
    <label>Sales Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>SM</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidates1</relationshipName>
    <type>Lookup</type>
</CustomField>