force-app/main/default/objects/Candidate__c/fields/Scheduled_For_Structured_Interview_Fit_S__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_For_Structured_Interview_Fit_S__c</fullName>
    <label>Keep In Touch Date</label>
    <type>Date</type>
</CustomField>