force-app/main/default/objects/Candidate__c/fields/School_s_Attended__c.field-meta.xml
<CustomField>
    <fullName>School_s_Attended__c</fullName>
    <label>School(s) Attended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>