force-app/main/default/objects/Candidate__c/fields/Series_65_License__c.field-meta.xml
<CustomField>
    <fullName>Series_65_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Series 65 License</label>
    <type>Checkbox</type>
</CustomField>