force-app/main/default/objects/Candidate__c/fields/SI3_Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>SI3_Conducted_by__c</fullName>
    <label>SI3 Conducted by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diljeet Masuda</fullName>
            </value>
            <value>
                <fullName>Scott Grove</fullName>
            </value>
            <value>
                <fullName>Scott Primm</fullName>
            </value>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>Van Hess</fullName>
            </value>
            <value>
                <fullName>Brooke Ianni</fullName>
            </value>
            <value>
                <fullName>Brad Sofonia</fullName>
            </value>
            <value>
                <fullName>Andrew Moore</fullName>
                <isActive>false</isActive>
                <label>Andrew Moore</label>
            </value>
            <value>
                <fullName>Brady Murray</fullName>
                <isActive>false</isActive>
                <label>Brady Murray</label>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
                <isActive>false</isActive>
                <label>Jonathan Gruber</label>
            </value>
            <value>
                <fullName>Joy Avedesian</fullName>
                <isActive>false</isActive>
                <label>Joy Avedesian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>