force-app/main/default/objects/Candidate__c/fields/SI3_Tally__c.field-meta.xml
<CustomField>
    <fullName>SI3_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SI3 Tally</label>
    <type>Checkbox</type>
</CustomField>