force-app/main/default/objects/Candidate__c/fields/SI_1_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>SI_1_Conducted_By__c</fullName>
    <description>Interviewer who conducted SI 1 Interview</description>
    <label>SI 1 Conducted By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interviewers</valueSetName>
    </valueSet>
</CustomField>