force-app/main/default/objects/Candidate__c/fields/SI_1_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>SI_1_Date_Completed__c</fullName>
    <label>SI 1 Date Completed</label>
    <type>Date</type>
</CustomField>