force-app/main/default/objects/Candidate__c/fields/SI_1_Interview_Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>SI_1_Interview_Conducted_by__c</fullName>
    <label>SI 1  Interview Conducted by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>