force-app/main/default/objects/Candidate__c/fields/SI_2_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>SI_2_Date_Completed__c</fullName>
    <label>SI 2 Date Completed</label>
    <type>Date</type>
</CustomField>