force-app/main/default/objects/Candidate__c/fields/SI_2_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>SI_2_Interviewer__c</fullName>
    <label>SI 2 Interviewer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>