force-app/main/default/objects/Candidate__c/fields/SI_2_Tally__c.field-meta.xml
<CustomField>
    <fullName>SI_2_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SI 2 Tally</label>
    <type>Checkbox</type>
</CustomField>