force-app/main/default/objects/Candidate__c/fields/SI_3_Completed__c.field-meta.xml
<CustomField>
    <fullName>SI_3_Completed__c</fullName>
    <label>SI 3 Completed</label>
    <type>Date</type>
</CustomField>