force-app/main/default/objects/Candidate__c/fields/SI_3_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>SI_3_Conducted_By__c</fullName>
    <description>Interviewer who conducted SI 3</description>
    <label>SI 3 Conducted By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interviewers</valueSetName>
    </valueSet>
</CustomField>