force-app/main/default/objects/Candidate__c/fields/SI_3_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>SI_3_Interviewer__c</fullName>
    <description>Interviewer who conducted SI 3 Interview</description>
    <label>SI 3 Interviewer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Van Hess</fullName>
            </value>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
            </value>
            <value>
                <fullName>Diljeet Masuda</fullName>
            </value>
            <value>
                <fullName>Scott Primm</fullName>
            </value>
            <value>
                <fullName>Rachyll Tenny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>