force-app/main/default/objects/Candidate__c/fields/SI_3_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>SI_3_Scheduled__c</fullName>
    <label>SI 3 Scheduled</label>
    <type>Date</type>
</CustomField>