force-app/main/default/objects/Candidate__c/fields/State_L_H_Licenses_Date__c.field-meta.xml
<CustomField>
    <fullName>State_L_H_Licenses_Date__c</fullName>
    <label>State L&amp;H Licenses Date</label>
    <type>Date</type>
</CustomField>