force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active/In Process</fullName>
            </value>
            <value>
                <fullName>Contracted- Broker</fullName>
            </value>
            <value>
                <fullName>Contracted- Career</fullName>
            </value>
            <value>
                <fullName>Contracted- Contract B</fullName>
            </value>
            <value>
                <fullName>Contracted- Intern</fullName>
            </value>
            <value>
                <fullName>Keep In Touch</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>No Show/Dead File</fullName>
            </value>
            <value>
                <fullName>Pre-Contract Termination</fullName>
            </value>
            <value>
                <fullName>Redirect</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Contracting Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>