force-app/main/default/objects/Candidate__c/fields/Studying_for_Life_Health__c.field-meta.xml
<CustomField>
    <fullName>Studying_for_Life_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Studying for Life &amp; Health</label>
    <type>Checkbox</type>
</CustomField>