force-app/main/default/objects/Candidate__c/fields/Submissions_Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>Submissions_Progress_Percent__c</fullName>
    <description>Percentage of submission requirement met (toward 5 opportunities).</description>
    <formula>IF(
    Opportunity_Count__c &gt; 0,
    MIN(Opportunity_Count__c / 5, 1),
    0
)</formula>
    <inlineHelpText>Progress toward 5 submission requirement (capped at 100%).</inlineHelpText>
    <label>Submissions Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>