force-app/main/default/objects/Candidate__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>JR, SR, III, IV, V</description>
    <inlineHelpText>JR, SR, III, IV, V</inlineHelpText>
    <label>Suffix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>