force-app/main/default/objects/Candidate__c/fields/Survey_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Survey_Assigned__c</fullName>
    <label>Survey Assigned</label>
    <type>Date</type>
</CustomField>