force-app/main/default/objects/Candidate__c/fields/Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed__c</fullName>
    <label>Survey Completed</label>
    <type>Date</type>
</CustomField>