force-app/main/default/objects/Candidate__c/fields/Survey_Score__c.field-meta.xml
<CustomField>
    <fullName>Survey_Score__c</fullName>
    <label>Survey Score</label>
    <length>30</length>
    <type>Text</type>
</CustomField>