force-app/main/default/objects/Candidate__c/fields/Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Target_Market__c</fullName>
    <label>Target Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Institutional_Investment_Industry</fullName>
                <label>Institutional Investment Industry</label>
            </value>
            <value>
                <fullName>Career Changer</fullName>
            </value>
            <value>
                <fullName>Experienced 1-2 years</fullName>
            </value>
            <value>
                <fullName>Experienced 2-4 years</fullName>
            </value>
            <value>
                <fullName>Experienced 5+ years</fullName>
            </value>
            <value>
                <fullName>IXP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>